# latam_airlines_mle

./: .gitattributes  .gitignore  4-5-Pruebas_de_estres.md  Dockerfile  README.md  environment.yml  initializer.sh  install.md  pyproject.toml  script.lua  setup.py
api/: main.py  requirements.txt
api/app/: models.py  utils.py  views.py
latam_airlines_mle/utils/: latam_utils.py  logger.py
models/: model_balanced_over.pkl
notebooks/: to-expose.ipynb
reports/: report_balanced_over.txt
test/: test.py
