[tool.poetry]
name = "latam_airlines_mle"
version = "0.1.0"
description = "descripción_del_proyecto"
authors = ["frank hurtado <frandak2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
numpy = "^1.21.4"
scikit-learn = "1.0.2"
xgboost = "^1.5.1"
imblearn = "^0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
plotly = "^5.3.1"
pyjanitor = "^0.21.1"
pyprojroot = "^0.2.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.0"
nbdime = "^3.1.0"
black = "^21.9b0"
invoke = "^1.6.0"
LIME = "^0.2.0"
missingno = "^0.5.2"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
pytest = "^7.3.1"
httpx = "^0.24.0"

[tool.poetry.scripts]
editable = "pip install --editable ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

